tests/compiler/typecheck/function_arguments_mismatch.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/function_arguments_mismatch.kk:3:5
  │
3 │     \(_, _) => 1
  │     ^^^^^^^^^^^^ Function arguments length mismatch
  │
  = Expected 1 argument, but this function has 2 arguments
