tests/compiler/typecheck/function_arguments_mismatch.kk
let f = 
    \(x: Number) => x
    \(_, _) => 1
